Fix overflow problem by setting container-fluid. Make the footer sticky. Finish styling the succes page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,17 @@
 
 /* -----------------------------------------------Global Styles */
 
+html, body {
+  height: 100%;
+}
+
 body {
-  width: 100%;
-  overflow-x: hidden;
-  font-family: var(--primary-font);
+   font-family: var(--primary-font);
+}
+
+body > footer {
+  position: sticky;
+  top: 100%;
 }
 
 h1,
@@ -79,8 +86,10 @@ h3 {
 
 /* ---------------------------------------------------------------Service cards on home page */
 
-.services-home {
-  background-color: lightgrey;
+#services-home {
+  background: lightgrey;
+ 
+  
 }
 
 #services-home h3 {
@@ -88,9 +97,11 @@ h3 {
 }
 
 .card {
-  border: 3px solid var(--light-highlight-color);
+  border: 2px solid var(--light-highlight-color);
   /*removes the extra left and right padding created by the card class. The div inside already has enough padding for the content*/
   padding: 0;
+  border-radius: 0;
+  
 }
 
 /* ------------------------------------------------------About Me preview on Home Page */
